[package]
name = "mimosa"
version = "0.1.2" #完成一个模块+0.1,完成一个功能+0.0.1
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.3"
actix-cors = "0.3.0-alpha.1"
# actix-files = "0.2.1"
# actix-identity = "0.3.0-alpha.1"
actix-redis = "0.9.0-alpha.2"
actix-rt = "1.1"
actix-service = "1"
argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}
# casbin = "0.4"
derive_more = "0.99"
# diesel = {version="1.4", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
dotenv = "0.15"
envy = "0.4"
env_logger = "0.7"
futures = "0.3"
jsonwebtoken = "7.2"
lazy_static = "1.4"
# listenfd = "0.3"
log = "0.4"
# openssl = "*"
openssl = "0.10"
rand="0.7"
rayon = "1"
redis-async = "0.6"
# r2d2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
slug="0.1"

time = { version = "0.2", features = ["serde"] }
# tonic = "0.2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.10"
validator_derive = "0.10"


# Needed for sqlite.
# libsqlite3-sys = { version = "*", features = ["bundled"] }

[dependencies.actix-web]
version = "3.0.0-alpha.3"
# features = ["rustls"]

[dev-dependencies]
actix-http-test = "2.0.0-alpha.1"

[features]
default = ["random-suffix"]
random-suffix = []