[package]
name = "actix-framework"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-redis = { version = "0.9", optional = true }
argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}

diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "r2d2", "uuid", "serde_json"]}
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
rayon = "1"
redis-async = { version = "0.6", optional = true }
serde = "1"
serde_derive = "1"
serde_json = "1"
slug="0.1"
thiserror="1"

[dev-dependencies]
actix-rt = "1"

[features]
default=["postgres","redis"]
# sql types
cockraoch=[]
mysql=[]
postgres=[]
sqlite=[]
# use redis or not
redis=["actix-redis"]

