[package]
name = "mcore"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web="3"
actix-cors = "0.4"
actix-http-test="2"
actix-files = "0.4"
# actix-identity = "0.3.0-alpha.1"
actix-redis = "0.9"
actix-service = "1"
argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}
# casbin = "0.4"
derive_more = "0.99"
# diesel = {version="1.4", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
dotenv = "0.15"
envy = "0.4"
env_logger = "0.7"
futures = "0.3"
jsonwebtoken = "7"
lazy_static = "1"
# listenfd = "0.3"
log = "0.4"
# openssl = "*"
openssl = "0.10"
rand="0.7"
rayon = "1"
redis-async = "0.6"
# r2d2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
slug="0.1"
# tonic = "0.2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.11"
validator_derive = "0.11"


# Needed for sqlite.
# libsqlite3-sys = { version = "*", features = ["bundled"] }

[features]
default = ["random-suffix"]
random-suffix = []

[dev-dependencies]
actix-rt = "1"