[package]
name = "user-api"
version = "0.3.2" #完成一个模块+0.1,完成一个功能+0.0.1
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

[dependencies]
actix-framework = { path = "../actix-framework", version = "0.1.0" }
actix-cors = "0.4"
actix-http-test="2"
actix-files = "0.4"
actix-service = "1"
argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}
dotenv = "0.15"
envy = "0.4"
env_logger = "0.7"
futures = "0.3"
jsonwebtoken = "7"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
rand="0.7"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
slug="0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.11"
validator_derive = "0.11"

[features]
default = ["random-suffix"]
random-suffix = []

[dev-dependencies]
actix-rt = "1"