[package]
name = "zen-web"
version = "0.3.1" #完成一个模块+0.1,完成一个功能+0.0.1
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.11.0-beta.2"
# actix-cors ="0.5"
actix-web = "4.0.0-beta.3"
actix-web-actors = "4.0.0-beta.2"
argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}
# casbin = "0.4"
derive_more = "0.99"
diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
dotenv = "0.15"
envy = "0.4"
env_logger = "0.8"
futures = "0.3"
jsonwebtoken = "7"
lazy_static = "1"
# listenfd = "0.3"
log = "0.4"
# openssl = "*"
openssl = "0.10"
rand="0.8"
rayon = "1"
# r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
slug="0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.12", features = ["derive"] }

zen-database = { path = "../zen/database" }

[features]
default = ["random-suffix"]
random-suffix = []

[dev-dependencies]
actix-rt = "2"
serde_json = "1"